syntax = "proto3";

package basket;

option go_package = "obs-tools-usage/api/proto/basket";

// Basket service definition
service BasketService {
    // Basket operations
    rpc GetBasket(GetBasketRequest) returns (GetBasketResponse);
    rpc CreateBasket(CreateBasketRequest) returns (CreateBasketResponse);
    rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse);
    
    // Item operations
    rpc AddItem(AddItemRequest) returns (AddItemResponse);
    rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
    rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse);
    rpc ClearBasket(ClearBasketRequest) returns (ClearBasketResponse);
    
    // Health check
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Basket item message
message BasketItem {
    int32 product_id = 1;
    string name = 2;
    double price = 3;
    int32 quantity = 4;
    double subtotal = 5;
    string category = 6;
}

// Basket message
message Basket {
    string id = 1;
    string user_id = 2;
    repeated BasketItem items = 3;
    double total = 4;
    int32 item_count = 5;
    string created_at = 6;
    string updated_at = 7;
    string expires_at = 8;
}

// Request messages
message GetBasketRequest {
    string user_id = 1;
}

message CreateBasketRequest {
    string user_id = 1;
}

message DeleteBasketRequest {
    string user_id = 1;
}

message AddItemRequest {
    string user_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
}

message UpdateItemRequest {
    string user_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
}

message RemoveItemRequest {
    string user_id = 1;
    int32 product_id = 2;
}

message ClearBasketRequest {
    string user_id = 1;
}

message HealthCheckRequest {
    string service = 1;
}

// Response messages
message GetBasketResponse {
    bool success = 1;
    string message = 2;
    Basket basket = 3;
}

message CreateBasketResponse {
    bool success = 1;
    string message = 2;
    Basket basket = 3;
}

message DeleteBasketResponse {
    bool success = 1;
    string message = 2;
}

message AddItemResponse {
    bool success = 1;
    string message = 2;
    Basket basket = 3;
}

message UpdateItemResponse {
    bool success = 1;
    string message = 2;
    Basket basket = 3;
}

message RemoveItemResponse {
    bool success = 1;
    string message = 2;
    Basket basket = 3;
}

message ClearBasketResponse {
    bool success = 1;
    string message = 2;
    Basket basket = 3;
}

message HealthCheckResponse {
    bool success = 1;
    string message = 2;
    string service = 3;
    string status = 4;
    string timestamp = 5;
    string version = 6;
}
